# glfwOcctViewer

./: CMakeLists.txt  GlfwOccView.cpp  GlfwOccView.h  GlfwOcctWindow.cpp  LICENSE  OccWindow.cpp  OccWindow.h  README.md  glfw-occ.vcxproj  main.cpp  occwindow.cpp  occwindow.h  readme.md
